<resources>
    <string name="app_name">Urbalog</string>
    <string name="searchButton">Stop</string>
    <string name="hostButton">Host</string>
    <string name="playButton">Play</string>
    <string name="refreshButton">Refresh</string>
    <string name="buildingsButton">Batiments</string>
    <string name="configButton">configuration</string>
    <string name="addBuilding">Ajouter un Batiment</string>
    <string name="initBuildings">Réinitialiser Batiments</string>
    <string name="modifBuilding">Modification Batiments</string>
    <string name="nbBuildingPerTurn">Choisir le nombre de bâtiments max par tour</string>
    <string name="helpNbBuildingPerTurn">Pour modifier le nombre d\'aménagements pouvant être construits par tour :</string>
    <string name="addRole">Ajouter un role</string>
    <string name="initRole">Réinitialiser les roles</string>
    <string name="modifRole">Modifier les roles</string>

</resources>
