<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:weightSum="4"
    tools:context=".AdminInterfaceConnection">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#C1006BFF"
        android:orientation="vertical"
        android:weightSum="100">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:text="@string/searchButton" />

        <Button
            android:id="@+id/hostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:text="@string/hostButton" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:text="@string/playButton" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="2"
            android:text="@string/refreshButton" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>