<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPink"
    android:baselineAligned="true"
    android:weightSum="4"
    tools:context=".AdminConnectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="100">

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="16"
            android:background="@drawable/button_style"
            android:fontFamily="@font/caractere_l1"
            android:text="@string/searchButton" />

        <Button
            android:id="@+id/hostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="16"
            android:background="@drawable/button_style"
            android:fontFamily="@font/caractere_l1"
            android:text="@string/hostButton" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="16"
            android:background="@drawable/button_style"
            android:fontFamily="@font/caractere_l1"
            android:text="@string/playButton" />

        <Button
            android:id="@+id/configurationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="16"
            android:background="@drawable/button_style"
            android:fontFamily="@font/caractere_l1"
            android:text="@string/configButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nbPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/caractere_l1"
                android:gravity="center_horizontal|center_vertical"
                android:text="0/5" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/caractere_l1"
                android:gravity="center_horizontal|center_vertical"
                android:text="Disconnected" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" />
</LinearLayout>